add Japanese in Chinese

--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -157,6 +157,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "英式英语",
                         "en-US": "美式英语",
@@ -164,7 +165,8 @@
                         "es-ES": "西班牙语",
                         "de-DE": "德语",
                         "ru-RU": "俄语",
-                        "zh-CN": "简体中文"
+                        "zh-CN": "简体中文",
+                        "ja-JP": "日语"
                     }
                 }
             },
@@ -457,7 +459,7 @@
                     }
                 }
             }
-        },        
+        },
         "maps": {
             "one-click-install": {
                 "success": "谱面安装完成",
@@ -527,10 +529,10 @@
                     "placeholder": "输入你的密码",
                     "max-length-warning": "密码超过64个字符！如果密码无效，请尝试只输入前64个字符。"
                 },
-                "qr":{
+                "qr": {
                     "label": "或使用二维码",
-                    "note":{
-                        "use-the":"使用",
+                    "note": {
+                        "use-the": "使用",
                         "steam-mobile-app": "Steam 移动应用",
                         "to-connect-with-qr": "通过二维码登录。"
                     }
@@ -649,7 +651,7 @@
                 "valid-btn": "取消关联谱面"
             }
         },
-        
+
         "download-maps": {
             "search-btn": "搜索",
             "loading-maps": "谱面加载中...",
@@ -681,15 +683,15 @@
             "advanced-launch": "高级启动",
             "valid-btn": "创建快捷方式"
         },
-        "connect-to-meta":{
+        "connect-to-meta": {
             "title": "连接到 Meta",
-            "body":{
+            "body": {
                 "token-needed": "需要 Meta 登录令牌用于下载 Beat Saber。",
                 "need-cookie-enabled": "通过登录 Meta，将打开一个登录窗口，然后你可以开始登录过程。请确保接受 cookie，否则我们可能无法检索你的令牌以开始下载。",
                 "enter-token-manually": "手动输入我的登录令牌",
                 "enter-token-manually-tooltip": "这将允许你在不通过 Meta 登录的情况下输入你的登录令牌。"
             },
-            "stay":"记住我",
+            "stay": "记住我",
             "connect-to-meta": "连接到 Meta"
         },
         "original-version-backup-oculus": {
