--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -156,6 +156,7 @@
                     "es-ES": "Español",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
+                    "zh-CN": "简体中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "イギリス英語",
@@ -164,6 +165,7 @@
                         "es-ES": "スペイン語",
                         "de-DE": "ドイツ語",
                         "ru-RU": "ロシア語",
+                        "zh-CN": "簡体字中国",
                         "ja-JP": "日本語"
                     }
                 }
