Added "Traditional Chinese" language system

--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -157,6 +157,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "Английский, Великобритания",
@@ -166,6 +167,7 @@
                         "de-DE": "Немецкий",
                         "ru-RU": "Русский",
                         "zh-CN": "Китайский (упрощенный)",
+                        "zh-TW": "Китайский (традиционный)",
                         "ja-JP": "Японский"
                     }
                 }
