--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -157,6 +157,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "English, United Kingdom",
@@ -166,6 +167,7 @@
                         "de-DE": "German",
                         "ru-RU": "Russian",
                         "zh-CN": "Chinese (Simplified)",
+                        "zh-TW": "Chinese (Traditional)",
                         "ja-JP": "Japanese"
                     }
                 }
