--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -156,6 +156,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "Inglés, Reino Unido",
@@ -165,6 +166,7 @@
                         "de-DE": "Alemán",
                         "ru-RU": "Ruso",
                         "zh-CN": "Chino simplificado",
+                        "zh-TW": "Chino tradicional",
                         "ja-JP": "Japonés"
                     }
                 }
