--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -156,6 +156,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "Anglais, Royaume-Uni",
@@ -165,6 +166,7 @@
                         "de-DE": "Allemand",
                         "ru-RU": "Russe",
                         "zh-CN": "Chinois simplifié",
+                        "zh-TW": "Chinois traditionnel",
                         "ja-JP": "Japonais"
                     }
                 }
