--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -157,6 +157,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "イギリス英語",
@@ -166,6 +167,7 @@
                         "de-DE": "ドイツ語",
                         "ru-RU": "ロシア語",
                         "zh-CN": "簡体字中国",
+                        "zh-TW": "繁体字中国",
                         "ja-JP": "日本語"
                     }
                 }
