--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -157,6 +157,7 @@
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
+                    "zh-TW": "正體中文",
                     "ja-JP": "日本語",
                     "translated": {
                         "en-EN": "英式英语",
@@ -166,6 +167,7 @@
                         "de-DE": "德语",
                         "ru-RU": "俄语",
                         "zh-CN": "简体中文",
+                        "zh-TW": "正体中文",
                         "ja-JP": "日语"
                     }
                 }
