--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -946,7 +946,7 @@
             },
             "prevent-for-models-breaks": {
                 "title": "Modelos rotos",
-                "desc": "Desde la actualización del motor de Beat Saber, los modelos ya no son funcionales para esta versión."
+                "desc": "Desde la actualización del motor de Beat Saber, todos los mods de modelos personalizados se han roto y necesitan ser actualizados. Todavía no han sido actualizados."
             },
             "export-success": {
                 "title": "Exportación completada 🎉"
