--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -947,7 +947,7 @@
             },
             "prevent-for-models-breaks": {
                 "title": "Сломанные модели",
-                "desc": "После обновления движка Beat Saber, модели не работают с этой версией."
+                "desc": "С момента обновления движка Beat Saber, все пользовательские модификации моделей сломались и требуют обновления. Они еще не были обновлены."
             },
             "export-success": {
                 "title": "Экспорт завершен 🎉"
