Update translations for changelogs

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -195,6 +195,10 @@
                     "report-bug": "Fehler melden",
                     "open-logs": "Protokolle öffnen"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 Neues im Changelog entdecken!",
+                "not-found": "😕 Hoppla, kein Changelog zu sehen!"
             }
         }
     },
