--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -195,6 +195,10 @@
                     "report-bug": "Report a bug",
                     "open-logs": "Open logs"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 Check Out the Changelog!",
+                "not-found": "😕 Oops, No Changelog Here!"
             }
         }
     },
