--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -194,6 +194,10 @@
                     "report-bug": "Informar de un error",
                     "open-logs": "Abrir los registros"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 ¡Descubre lo nuevo en el Changelog!",
+                "not-found": "😕 Uy, ¡Changelog no encontrado!"
             }
         }
     },
