--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -195,6 +195,10 @@
                     "report-bug": "バグを報告",
                     "open-logs": "ログを表示"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 チェンジログを覗いてみて！",
+                "not-found": "😕 あれ、チェンジログが見当たらない！"
             }
         }
     },
