--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -195,6 +195,10 @@
                     "report-bug": "Сообщить о баге",
                     "open-logs": "Открыть логи"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 Изучаем Changelog!",
+                "not-found": "😕 Ой, Changelog нигде не видно!"
             }
         }
     },
