--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -195,6 +195,10 @@
                     "report-bug": "報告 bug",
                     "open-logs": "打開日誌"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 探索更新日誌！",
+                "not-found": "😕 噢，找不到更新日誌！"
             }
         }
     },
