--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -195,6 +195,10 @@
                     "report-bug": "报告 bug",
                     "open-logs": "打开日志"
                 }
+            },
+            "changelogs": {
+                "open" : "🚀 探索更新日志！",
+                "not-found": "😕 哎呀，找不到更新日志！"
             }
         }
     },
