--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -505,8 +505,7 @@
         "choose-store": {
             "title": "Какая платформа?",
             "body": "Выберите платформу, с которой вы хотите скачать Beat Saber.",
-            "set-in-settings": "Установить платформу по умолчанию в настройках",
-            "unavailable": "В связи с недавними изменениями от Oculus, понижение версий Oculus в настоящее время больше не доступно. Мы изучаем проблему и будем держать вас в курсе на сервере BSManager в Discord."
+            "set-in-settings": "Установить платформу по умолчанию в настройках"
         },
         "guard": {
             "title": "Steam Guard",
