--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -707,14 +707,22 @@
             "understood": "分かった"
         },
         "enter-meta-token": {
-            "title": "Metaトークン",
+            "title": "Oculusトークン",
             "body": {
-                "need-token": "Beat Saberをダウンロードするには、Metaのログイントークンが必要です。",
-                "how-obtain-token": "Metaトークンはどうやって入手すればいいですか？",
-                "input-label": "Metaトークン",
-                "token-is-invalid": "トークンが無効です。"
+                "info-enter-token": "Beat Saberをダウンロードするには、あなたのオキュラスログイントークンが必要です。",
+                "how-obtain-token": "オキュラストークンはどうやって取得するの？",
+                "oculus-token": "オキュラストークン",
+                "token-is-invalid": "トークンが無効です。",
+                "save-my-token": "私のトークンを保存する",
+                "have-token-saved": "すでにトークンを保存しています",
+                "save-token-info": "これにより、トークンを簡単に再利用するために保存します。保管のためにトークンを暗号化するパスワードを作成する必要があります。パスワードを忘れた場合は、トークンを再度提供するだけです。",
+                "password": "パスワード",
+                "password-too-short": "パスワードが短すぎます",
+                "info-enter-password": "Beat Saberをダウンロードするには、あなたのオキュラスログイントークンが必要です。オキュラストークンを保存するために使用したパスワードを入力してください。",
+                "info-disabled-btn-password": "提供されたパスワードで復号化されたトークンは無効です。トークンを保存するために使用されたパスワードと同じであることを確認してください。",
+                "enter-oculus-token": "オキュラストークンを入力する"
             },
-            "valid-btn": "検証"
+            "valid-btn": "確認"
         }
     },
     "maps": {
