--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -707,12 +707,20 @@
             "understood": "Понял"
         },
         "enter-meta-token": {
-            "title": "Мета Токен",
+            "title": "Токен Oculus",
             "body": {
-                "need-token": "Для загрузки Beat Saber требуется ваш токен входа в Meta.",
-                "how-obtain-token": "Как получить мой Мета Токен?",
-                "input-label": "Мета Токен",
-                "token-is-invalid": "Токен недействителен."
+                "info-enter-token": "Для загрузки Beat Saber требуется ваш токен входа в Oculus.",
+                "how-obtain-token": "Как получить мой токен Oculus?",
+                "oculus-token": "Токен Oculus",
+                "token-is-invalid": "Токен недействителен.",
+                "save-my-token": "Сохранить мой токен",
+                "have-token-saved": "У меня уже есть сохраненный токен",
+                "save-token-info": "Это сохранит ваш токен для удобства повторного использования. Вам необходимо создать пароль для шифрования вашего токена для хранения. Если вы забудете пароль, вам просто нужно будет снова предоставить свой токен.",
+                "password": "Пароль",
+                "password-too-short": "Слишком короткий пароль",
+                "info-enter-password": "Для загрузки Beat Saber требуется ваш токен входа в Oculus. Введите пароль, используемый для сохранения вашего токена Oculus.",
+                "info-disabled-btn-password": "Токен, расшифрованный с использованием предоставленного пароля, недействителен. Убедитесь, что пароль совпадает с тем, который использовался для сохранения токена.",
+                "enter-oculus-token": "Введите токен Oculus"
             },
             "valid-btn": "Подтвердить"
         }
