--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -708,12 +708,20 @@
             "understood": "明白了"
         },
         "enter-meta-token": {
-            "title": "Meta 令牌",
+            "title": "Oculus令牌",
             "body": {
-                "need-token": "要下載 BeatSaber，需要你的 Meta 登錄令牌。",
-                "how-obtain-token": "如何獲取我的 Meta 令牌？",
-                "input-label": "Meta 令牌",
-                "token-is-invalid": "令牌無效。"
+                "info-enter-token": "下載Beat Saber需要您的Oculus登錄令牌。",
+                "how-obtain-token": "我如何獲得我的Oculus令牌？",
+                "oculus-token": "Oculus令牌",
+                "token-is-invalid": "令牌無效。",
+                "save-my-token": "保存我的令牌",
+                "have-token-saved": "我已經保存了一個令牌",
+                "save-token-info": "這將保存您的令牌以便更容易地重新使用。您需要創建一個密碼來加密您的令牌以進行存儲。如果您忘記了密碼，只需再次提供您的令牌即可。",
+                "password": "密碼",
+                "password-too-short": "密碼太短",
+                "info-enter-password": "下載Beat Saber需要您的Oculus登錄令牌。請輸入用於保存您的Oculus令牌的密碼。",
+                "info-disabled-btn-password": "使用提供的密碼解密的令牌無效。確保密碼與保存令牌時使用的密碼相同。",
+                "enter-oculus-token": "輸入Oculus令牌"
             },
             "valid-btn": "驗證"
         }
