--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -728,6 +728,8 @@
     "maps": {
         "map-filter-panel": {
             "duration": "Duration",
+            "nps" : "Notes Per Second",
+            "nps-abbr" : "NPS",
             "tags": "tags",
             "specificities": "general",
             "requirements": "requirements"
@@ -793,9 +795,24 @@
             "Expert": "expert",
             "ExpertPlus": "expert+"
         },
+        "map-Characteristics": {
+            "Standard": "standard",
+            "OneSaber": "one saber",
+            "NoArrows": "no arrows",
+            "90Degree": "90°",
+            "360Degree": "360°",
+            "Lightshow": "lightshow",
+            "Lawless": "lawless"
+        },
         "map-item": {
             "by": "By {songAutor}",
-            "mapped-by": "mapped by"
+            "mapped-by": "mapped by",
+            "delete": "Delete",
+            "preview" : "Preview map",
+            "bsr-code" : "BSR code",
+            "download" : "Download map",
+            "downloading" :"Downloading map",
+            "cancel-download" : "Cancel download"
         }
     },
     "models": {
