--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -728,6 +728,7 @@
     "maps": {
         "map-filter-panel": {
             "duration": "尺",
+            "nps" : "秒間ノート数",
             "tags": "タグ",
             "specificities": "一般",
             "requirements": "要Mod"
@@ -795,7 +796,13 @@
         },
         "map-item": {
             "by": "By {songAutor}",
-            "mapped-by": "作成者 "
+            "mapped-by": "作成者 ",
+            "delete": "削除",
+            "preview" : "マッププレビュー",
+            "bsr-code" : "BSRコード",
+            "download" : "マップをダウンロード",
+            "downloading" :"マップをダウンロード中",
+            "cancel-download" : "ダウンロードをキャンセル"
         }
     },
     "models": {
