--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -719,6 +719,15 @@
                 "enter-oculus-token": "Введите токен Oculus"
             },
             "valid-btn": "Подтвердить"
+        },
+        "launch-as-admin": {
+            "title": "Права Администратора",
+            "body": {
+                "info": "Обнаружено, что Steam работает с правами администратора. Чтобы связаться со Steam, Beat Saber также должен быть запущен от имени администратора. В противном случае Beat Saber может столкнуться с проблемами и закрыться после запуска.",
+                "info-2": "Запуск Beat Saber в режиме администратора также даст права администратора установленным модам. Поэтому рекомендуется перезапустить Steam без прав администратора.",
+                "info-3": "Обратите внимание, что не рекомендуется предоставлять права администратора Steam, так как это также влияет на установленные игры и моды, представляя угрозу безопасности."
+            },
+            "launch-as-admin": "Запустить от имени администратора"
         }
     },
     "maps": {
