--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -719,6 +719,16 @@
                 "enter-oculus-token": "オキュラストークンを入力する"
             },
             "valid-btn": "確認"
+        },
+        "launch-as-admin": {
+            "title": "管理者権限",
+            "body": {
+                "info": "Steamが管理者権限で動作していることが検出されました。Steamと通信するためには、Beat Saberも管理者として起動する必要があります。そうでない場合、Beat Saberは問題が発生し、起動後に終了する可能性があります。",
+                "info-2": "管理者モードでBeat Saberを起動すると、インストールされたMODにも管理者権限が与えられます。そのため、管理者権限なしでSteamを再起動することをお勧めします。",
+                "info-3": "Steamに管理者権限を与えることはお勧めできません。これはインストールされたゲームやMODにも影響を与え、セキュリティリスクをもたらすからです。"
+            },
+            "launch-as-admin": "管理者として起動",
+            "not-remind-me": "Больше не напоминать"
         }
     },
     "maps": {
